Fix detail view scrollbar

--- a/src/Resources/public/src/scss/_c4g_detail_view.scss
+++ b/src/Resources/public/src/scss/_c4g_detail_view.scss
@@ -538,6 +538,8 @@
 
   &__imprint-row {
     @include make-row();
+    margin-right: auto;
+    margin-left: auto;
   }
 
   &__imprint-col {
